# agent-t

./: CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Plan.md  README.md
prompts/: agent-expert-rust-engineer.md  system.txt
src/: agent.rs  agent_loop.rs  colors.rs  commands.rs  diff.rs  error.rs  git.rs  inspector.html  inspector.rs  main.rs  permissions.rs  process_manager.rs  rust_analyzer.rs  session.rs  template.rs  terminal.rs  tree_sitter_chunker.rs  tui.rs  vecdb.rs
src/memory/: manager.rs  mod.rs  types.rs
src/tools/: bash.rs  bash_kill.rs  bash_list.rs  bash_output.rs  bash_status.rs  edit_file.rs  glob_files.rs  grep.rs  list_dir.rs  math_calc.rs  mod.rs  ra_code_actions.rs  ra_common.rs  ra_completion.rs  ra_diagnostics.rs  ra_find_references.rs  ra_format.rs  ra_goto_definition.rs  ra_hover.rs  ra_rename.rs  ra_symbols.rs  read_file.rs  search_key_memory.rs  search_routine_memory.rs  store_key_memory.rs  web_fetch.rs  web_search.rs  write_file.rs
